--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "main": "background.js",
   "dependencies": {
     "vue": "^2.6.11",
+    "vue-router": "^3.4.9",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
@@ -21,7 +22,7 @@
     "electron-devtools-installer": "^3.1.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.4",
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
